kubernetes-manifests/nats/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nats
  labels:
    app.kubernetes.io/part-of: online-boutique
    app.kubernetes.io/name: nats
